--- a/apollo-portal/src/main/resources/static/views/component/env-selector.html
+++ b/apollo-portal/src/main/resources/static/views/component/env-selector.html
@@ -4,7 +4,7 @@
         <td><input type="checkbox" ng-checked="envAllSelected" ng-click="toggleEnvsCheckedStatus()"></td>
         </td>
         <td>环境</td>
-        <td>集群</td>
+        <td style="display: none">集群</td>
     </tr>
     </thead>
     <tbody>
@@ -12,7 +12,7 @@
         <td width="10%"><input type="checkbox" ng-checked="cluster.checked"
                                ng-click="switchSelect(cluster, $event)"></td>
         <td width="30%" ng-bind="cluster.env"></td>
-        <td width="60%" ng-bind="cluster.name"></td>
+        <td style="display: none" width="60%" ng-bind="cluster.name"></td>
     </tr>
     </tbody>
 </table>
