--- a/apollo-portal/src/main/resources/static/views/component/item-modal.html
+++ b/apollo-portal/src/main/resources/static/views/component/item-modal.html
@@ -52,7 +52,7 @@
                      ng-show="item.tableViewOperType == 'create' && !toOperationNamespace.isBranch">
                     <label class="col-sm-2 control-label">
                         <apollorequiredfield></apollorequiredfield>
-                        选择集群</label>
+                        选择环境</label>
                     <div class="col-sm-10">
                         <apolloclusterselector apollo-app-id="appId"
                                                apollo-default-all-checked="false"
